Stretch image to max size. Fix button update issue

--- a/src/pages/question/question.scss
+++ b/src/pages/question/question.scss
@@ -26,4 +26,12 @@ page-question {
     left:0;
     color: color($colors, light);
   }
+
+  .image-view {
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 100%;
+    height: 100%;
+  }
 }
